# agentmemory-protocol-

./: .gitignore  .wallet-base64.txt  ARCHITECTURE.md  Anchor.toml  BATTLE-LOG.md  COMMIT-SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DEMO-PITCH-DECK.md  DEMO-SCRIPT.md  DEMO-VIDEO-FINAL.md  DEMO-VIDEO-SCRIPT.md  DEPLOY-INSTRUCTIONS.md  DEPLOYMENT-FIX.md  DEPLOYMENT-STATUS.md  DEPLOYMENT.md  FAQ.md  FINAL-HACKATHON-TODO.md  FORUM-POST-DEPLOYMENT.md  FREE-TIER-DEMO.md  FULL-DOCUMENTATION.md  GITHUB-SECRETS-SETUP.md  HACKATHON-FINAL-SUBMISSION.md  HEARTBEAT-2026-02-07-0102.md  HEARTBEAT-2026-02-07-0150.md  IMMEDIATE-ACTIONS-DAY7.md  LAUNCH-CHECKLIST.md  LAUNCH-DAY-PLAYBOOK.md  LICENSE  MANUAL-DEPLOYMENT.md  MARKETPLACE-CATALOG.md  MOLTBOOK-POST-FINAL.md  NEXT-STEPS.md  PROJECT-STATUS-UPDATE.md  PROJECT-STATUS.md  PUSH-INSTRUCTIONS.md  QUICKSTART.md  README-GITHUB.md  README-UPDATED.md  README.md  (+18 more)
.github/: PULL_REQUEST_TEMPLATE.md
cli/: README.md  agentmemory-cli.ts  package.json
demo/: EXPORT-INSTRUCTIONS.md  GOOGLE-SLIDES-READY.md  LIVE-DEVNET-DEMO-SCRIPT.md  README-PRESENTATION.md  SLIDE-BUILDER-INSTRUCTIONS.md  ascii-logo.txt  demo-script.md  pitch-slides.md  podcast.html  presentation.html  terminal-demo.sh  video-presentation.html
examples/: README.md  agentdex-integration.ts  autovault-integration.ts  dao-governance.ts  money-machine.ts  quickstart.ts  solder-cortex-integration.ts  trading-bot.ts  zk-compression-integration.ts
explorer/: index.html  package.json  vite.config.js
marketing/: AI-LOGO-PROMPTS.md  FORUM-ANNOUNCEMENT.md  IMMEDIATE-ANNOUNCEMENT.md  (+5 more)
(+26 files in other folders)
