[package]
name = "agent-memory"
version = "0.1.0"
description = "Solana marketplace for AI memory systems"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agent_memory"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
